# arch-linter-net

./: .editorconfig  .gitignore  AGENTS.md  ArchLinterNet.slnx  Brewfile  CLAUDE.md  Directory.Build.props  LICENSE  Makefile  README.md  SECURITY.md  archlinternet.capabilities.json  codecov.yml  mkdocs.yml  nuget.config  opencode.json_example
.config/: dotnet-tools.json
.github/: dependabot.yml  release.yml
.github/workflows/: architecture-coverage.yml  ci.yml  codeql.yml  issue-276-apply.yml  issue-276-diagnose-lint.yml  issue-276-format.yml  package-validation.yml  pr346-spec-wording-fix.yml  release-nuget.yml  scorecard.yml  sonar-diagnostic.yml  temporary-sonar-diagnostics.yml
architecture/: dependencies.arch.yml
benchmarks/ArchLinterNet.CEL.Benchmarks/: ApiScenarioBenchmarks.cs  ArchLinterNet.CEL.Benchmarks.csproj  CacheIdentityBenchmarks.cs  CompilationBenchmarks.cs  (+8 more)
docs/: README.md  cli.md  getting-started.md  index.md  installation.md  policy-format.md
make/: dev.mk  docs.mk  lint.mk  paths.mk  test.mk
openspec/: config.yaml
schema/: baseline.schema.json  dependencies.arch.fragment.schema.json  dependencies.arch.schema.json
tools/: pyproject.toml
tools/diagnostics/: print_sonar_pr_issues.sh
tools/release/: calculate_version.py
tools/scripts/: architecture_coverage_report.py  configure_rtk_unix.sh  configure_rtk_windows.ps1  filter_mkdocs_warnings.py  install_unix_tools.sh  install_windows_tools.ps1  lint_csharp_file_size.py  test_coverage_badge.py
tools/scripts/tests/: test_architecture_coverage_report.py  test_test_coverage_badge.py
(+1690 files in other folders)
