[project]
name = "arch-linter-net-tools"
version = "0.1.0"
description = "Development tooling for the ArchLinterNet project"
requires-python = ">=3.11"
dependencies = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mdformat>=0.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = false
